--- a/404.md
+++ b/404.md
@@ -1,9 +1,9 @@
 ---
 permalink: 404.html
 ---
-Error: 404
+# Error: 404
 
-Code: PAGE_NOT_FOUND
+# Code: PAGE_NOT_FOUND
 
 Sadly, the page that you searched...
 
