--- a/404.md
+++ b/404.md
@@ -13,8 +13,12 @@ Sadly, the page that you searched...
 
 If you want, here are some links...
 
-https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/
-
 https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html
 
 https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html
+
+https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/monthly_puzzle.html
+
+Or...
+
+...you can click on the text above this message to go back home.
