--- a/404.md
+++ b/404.md
@@ -1,24 +1,57 @@
 ---
 permalink: 404.html
 ---
-# Error: 404
 
-# Code: PAGE_NOT_FOUND
+<div align="center">
+  
+   <a href="https://www.buymeacoffee.com/EggOfGlory999"><img src="https://img.buymeacoffee.com/button-api/?text=Support Me!&emoji=❤️&slug=EggOfGlory999&button_colour=00d0fa&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00" /></a>
+
+  <h1>Error: 404</h1>
+
+  <h2>Code: PAGE_NOT_FOUND</h2>
 
 Sadly, the page that you searched...
+  
+  <br>
 
 ...just wasn't found.
 
-
+<br>
+  
+<br>
 
 If you want, here are some links...
 
-https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html
+<a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html">Daily Chess Puzzle</a>
+  
+  <br>
+  
+  <br>
 
-https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html
+<a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/weekly_puzzle.html">Weekly Chess Puzzle</a>
+  
+  <br>
+  
+  <br>
 
-https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/monthly_puzzle.html
+<a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/monthly_puzzle.html">Monthly Chess Puzzles</a>
+  
+  <br>
+  
+  <br>
+  
+<a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html">Archived Puzzles</a>
+  
+  <br>
+  
+  <br>
+  
+  <br>
 
 Or...
 
-...you can click on the text above this message to go back home.
+  <br>
+  
+...you can enjoy this game...
+  
+  <iframe id="8918453" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8918453"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8918453"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
