--- a/404.md
+++ b/404.md
@@ -4,6 +4,17 @@ permalink: 404.html
 
 <div align="center">
   
+   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-40434d3c-c429-4b6a-b9b7-58f62267e42d"></div>
+  
+  
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-4952d659-4ad8-4807-aab6-635b0a368630"></div>
+  
+  
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-0f200ded-9114-4658-94d2-822e62b8581b"></div>
+  
    <a href="https://www.buymeacoffee.com/EggOfGlory999"><img src="button_support-me.png" /></a>
   
   <br>
